--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,8 +1,22 @@
+body{
+    margin: 0%;
+    padding: 0%;
+}
+
 .title{
     font-size: 60px;
     color: white;
-    background-color: #37bbc7;
+    background-color: #58A4B0;
     margin: 0px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0%;
+    margin-left: 200px;
+    padding: 0%;
+}
+
+.main{
+    margin: 0%;
+    margin-left: 200px;
+    padding: 0%;
 }
