--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -6,7 +6,7 @@ body{
 .title{
     font-size: 60px;
     color: white;
-    background-color: #58A4B0;
+    background-color: #05204A;
     margin: 0px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
